allow overflow fix issue

--- a/src/app/[lang]/nouns/dreams/create/_styles/content.module.css
+++ b/src/app/[lang]/nouns/dreams/create/_styles/content.module.css
@@ -18,7 +18,6 @@
 @media screen and (min-width: 1280px) {
     .container {
         min-height: calc(100vh - (var(--header-height) + 32px));
-        overflow: hidden;
         display: grid;
         grid-template-columns: repeat(5, minmax(0, 1fr));
     }
